<resources>
    <string name="app_name">Pixelbyte</string>

    <string name="finish">Finish</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="back">Back</string>
    <string name="new_template">New Template</string>
    <string name="add_category">Add Category</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Strings used for Create Class Activity -->
    <string name="title_activity_add_course">Add Course</string>
    <string name="course_name_label">Name</string>
    <string name="course_name_hint">ex) CS 125</string>
    <string name="course_color_label">Color</string>
    <string name="course_weight_label">Weight</string>
    <string name="course_department_label">Department</string>

    <string name="rec_templates_label">Recommended Templates</string>

    <!-- Strings used for Find Template Activity -->
    <string name="create_template_button_label">Create New Template</string>
    <string name="title_activity_profile">Profile</string>

    <string name="first_fragment_label">First Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="departments_array">
        <item>AAS - Asian American Studies</item>
        <item>ABE - Agricultural and Biological Eng</item>
        <item>ACCY - Accountancy</item>
        <item>ACE - Agr &amp; Consumer Economics</item>
        <item>ACES - Agr, Consumer, &amp; Env Sciences</item>
        <item>ADV - Advertising</item>
        <item>AE - Aerospace Engineering</item>
        <item>AFAS - Air Force Aerospace Studies</item>
        <item>AFRO - African American Studies</item>
        <item>AFST - African Studies</item>
        <item>AGCM - Agricultural Communications</item>
        <item>AGED - Agricultural Education</item>
        <item>AHS - Applied Health Sci Courses</item>
        <item>AIS - American Indian Studies</item>
        <item>ALEC - Agricultural Leadership, Education, &amp; Communications Program</item>
        <item>ANSC - Animal Sciences</item>
        <item>ANTH - Anthropology</item>
        <item>ARAB - Arabic</item>
        <item>ARCH - Architecture</item>
        <item>ART - Art</item>
        <item>ARTD - Art—Design</item>
        <item>ARTE - Art—Education</item>
        <item>ARTF - Art—Foundation</item>
        <item>ARTH - Art—History</item>
        <item>ARTJ - Japan House</item>
        <item>ARTS - Art—Studio</item>
        <item>ASRM - Actuarial Science &amp; Risk Management</item>
        <item>ASST - Asian Studies</item>
        <item>ASTR - Astronomy</item>
        <item>ATMS - Atmospheric Sciences</item>
        <item>BADM - Business Administration</item>
        <item>BASQ - Basque</item>
        <item>BCOG - Brain and Cognitive Science</item>
        <item>BCS - Bosnian-Croatian-Serbian</item>
        <item>BDI - Business Data &amp; Innovation</item>
        <item>BIOC - Biochemistry</item>
        <item>BIOE - Bioengineering</item>
        <item>BIOL - Biology</item>
        <item>BIOP - Biophysics</item>
        <item>BSE - Biomedical Sciences and Engineering</item>
        <item>BTW - Business and Technical Writing</item>
        <item>BULG - Bulgarian</item>
        <item>BUS - Business</item>
        <item>CAS - Center for Advanced Study</item>
        <item>CATL - Catalan</item>
        <item>CB - Comparative Biosciences</item>
        <item>CDB - Cell and Developmental Biology</item>
        <item>CEE - Civil and Environ Engineering</item>
        <item>CHBE - Chemical and Biomolecular Engineering</item>
        <item>CHEM - Chemistry</item>
        <item>CHIN - Chinese</item>
        <item>CHLH - Community Health</item>
        <item>CHP - Campus Honors Program</item>
        <item>CIC - Committee on Inst Cooperation</item>
        <item>CI - Curriculum and Instruction</item>
        <item>CLCV - Classical Civilization</item>
        <item>CLE - Clinical Sciences and Engineering</item>
        <item>CMN - Communication</item>
        <item>CPSC - Crop Sciences</item>
        <item>CS - Computer Science</item>
        <item>CSE - Computational Science and Engineering</item>
        <item>CW - Creative Writing</item>
        <item>CWL - Comparative &amp; World Literature</item>
        <item>CZCH - Czech</item>
        <item>DANC - Dance</item>
        <item>DTX - Human-Centered Design &amp; Design Thinking</item>
        <item>EALC - East Asian Languages &amp; Cultures</item>
        <item>ECE - Electrical and Computer Engineering</item>
        <item>ECON - Economics</item>
        <item>EDPR - Educational Practice</item>
        <item>EDUC - Education</item>
        <item>EIL - English as an International Language</item>
        <item>ENG - Engineering</item>
        <item>ENGL - English</item>
        <item>ENSU - Environmental Sustainability</item>
        <item>ENT - Entomology</item>
        <item>ENVS - Environmental Studies</item>
        <item>EOL - Educ Organization &amp; Leadership</item>
        <item>EPOL - Ed Policy, Org &amp; Leadership</item>
        <item>EPS - Educational Policy Studies</item>
        <item>EPSY - Educational Psychology</item>
        <item>ERAM - Education Research and Methods</item>
        <item>ESE - Earth, Society, &amp; Environment</item>
        <item>ESL - English as a Second Language</item>
        <item>ETMA- Engineering Technology &amp; Management for Agricultural Systems</item>
        <item>EURO - European Union Studies</item>
        <item>FAA - Fine and Applied Arts</item>
        <item>FIN - Finance</item>
        <item>FLTE - Foreign Language Teacher Education</item>
        <item>FR - French</item>
        <item>FSHN - Food Science &amp; Human Nutrition</item>
        <item>GC - Graduate College</item>
        <item>GEOG - Geography</item>
        <item>GEOL - Geology</item>
        <item>GER - German</item>
        <item>GLBL - Global Studies</item>
        <item>GMC - Germanic</item>
        <item>GRK - Greek</item>
        <item>GRKM - Modern Greek</item>
        <item>GSD - Game Studies and Design</item>
        <item>GS - General Studies</item>
        <item>GWS - Gender and Women\'s Studies</item>
        <item>HDES - Human Dimensions of Env Sys</item>
        <item>HDFS - Human Dev and Family Studies</item>
        <item>HEBR - Hebrew, Modern and Classical</item>
        <item>HIST - History</item>
        <item>HNDI - Hindi</item>
        <item>HORT - Horticulture</item>
        <item>HRD - Human Resource Development</item>
        <item>HT - Health Technology</item>
        <item>HUM - Humanities Courses</item>
        <item>IB - Integrative Biology</item>
        <item>IE - Industrial Engineering</item>
        <item>IHLT - I-Health</item>
        <item>INFO - Informatics</item>
        <item>IS - Information Sciences</item>
        <item>ITAL - Italian</item>
        <item>JAPN - Japanese</item>
        <item>JOUR - Journalism</item>
        <item>JS - Jewish Studies</item>
        <item>KIN - Kinesiology</item>
        <item>KOR - Korean</item>
        <item>LA - Landscape Architecture</item>
        <item>LAS - Liberal Arts and Sciences</item>
        <item>LAST - Latin American &amp; Caribbean Studies</item>
        <item>LAT - Latin</item>
        <item>LAW - Law</item>
        <item>LCTL - Less Commonly Taught Languages</item>
        <item>LEAD - Organizational &amp; Community Leadership</item>
        <item>LER - Labor and Employment Relations</item>
        <item>LGLA - Lingala</item>
        <item>LING - Linguistics</item>
        <item>LLS - Latina/Latino Studies</item>
        <item>MACS - Media and Cinema Studies</item>
        <item>MATH - Mathematics</item>
        <item>MBA - MBA Program</item>
        <item>MCB - Molecular and Cell Biology</item>
        <item>MDIA - Media</item>
        <item>MDVL - Medieval Studies</item>
        <item>ME - Mechanical Engineering</item>
        <item>MFST - Metropolitan Food &amp; Environmental Systems</item>
        <item>MICR - Microbiology</item>
        <item>MILS - Military Science</item>
        <item>MIP - Moleculr &amp; Integrative Physiology</item>
        <item>MSE - Materials Science &amp; Engineering</item>
        <item>MSP - Medical Scholars Program</item>
        <item>MUSC - Music Lessons and Ensembles</item>
        <item>MUSE - Museum Studies</item>
        <item>MUS - Music</item>
        <item>NE - Neural Engineering</item>
        <item>NEUR - Neuroscience</item>
        <item>NPRE - Nuclear, Plasma, Radiological Engineering</item>
        <item>NRES - Natural Resources &amp; Environmental Science</item>
        <item>NS - Naval Science</item>
        <item>NUTR - Nutritional Sciences</item>
        <item>PATH - Pathobiology</item>
        <item>PBIO - Plant Biology</item>
        <item>PERS - Persian</item>
        <item>PHIL - Philosophy</item>
        <item>PHYS - Physics</item>
        <item>PLPA - Plant Pathology</item>
        <item>POL - Polish</item>
        <item>PORT - Portuguese</item>
        <item>PSM - Professional Science Master</item>
        <item>PS - Political Science</item>
        <item>PSYC - Psychology</item>
        <item>QUEC - Quechua</item>
        <item>REES - Russian, East European and Eurasian Studies</item>
        <item>REHB - Rehabilitation Counseling</item>
        <item>REL - Religion</item>
        <item>RHET - Rhetoric and Composition</item>
        <item>RMLG - Romance Linguistics</item>
        <item>RSOC - Rural Sociology</item>
        <item>RST - Recreation, Sport, and Tourism</item>
        <item>RUSS - Russian</item>
        <item>SAME - South Asian &amp; Middle Eastern</item>
        <item>SBC - Strategic Brand Communication</item>
        <item>SCAN - Scandinavian</item>
        <item>SE - Systems Engineering and Design</item>
        <item>SHS - Speech and Hearing Science</item>
        <item>SLAV - Slavic</item>
        <item>SLCL - Literatures Cultures Linguistics</item>
        <item>SNSK - Sanskrit</item>
        <item>SOC - Sociology</item>
        <item>SOCW - Social Work</item>
        <item>SPAN - Spanish</item>
        <item>SPED - Special Education</item>
        <item>STAT - Statistics</item>
        <item>SWAH - Swahili</item>
        <item>TAM - Theoretical and Applied Mechanics</item>
        <item>TE - Technology Entrepreneurship</item>
        <item>THEA - Theatre</item>
        <item>TMGT - Technology and Management</item>
        <item>TRST - Translation Studies</item>
        <item>TSM - Technical Systems Management</item>
        <item>TURK - Turkish</item>
        <item>UKR - Ukrainian</item>
        <item>UP - Urban and Regional Planning</item>
        <item>VCM - Veterinary Clinical Medicine</item>
        <item>VM - Veterinary Medicine Courses</item>
        <item>WGGP - Women and Gender in Global Perspectives</item>
        <item>WLOF - Wolof</item>
        <item>WRIT - Writing Studies</item>
        <item>YDSH - Yiddish</item>
        <item>ZULU - Zulu</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>