<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".CreateNewTemplate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back_svgrepo_com"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:id="@+id/back_button"
                android:contentDescription="@string/back"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/back_button"
                android:layout_alignBottom="@id/back_button"
                android:gravity="center"
                android:text="@string/new_template" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                />

            <ListView
                android:id="@+id/template_in_progress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
            </ListView>

            <TextView
                android:id="@+id/add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/ic_add_svgrepo_com"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        app:layout_constraintBaseline_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:paddingHorizontal="15dp"
        android:paddingBottom="15dp">

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progressBackgroundTint="@color/gray"
            android:progressTint="@color/purple_500"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:progress="50" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/finish_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/finish" />
    </LinearLayout>
</LinearLayout>