<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="fill_horizontal"
    android:paddingVertical="50dp"
    android:paddingHorizontal="20dp"
    tools:context=".SelectTemplateOptions">

    <!-- Cancel Button-->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"/>

    <!-- Activity Title with Back Button -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/ic_back_svgrepo_com" />

        <TextView
            android:id="@+id/add_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:text="@string/title_activity_add_course"
            android:textSize="30sp" />
    </RelativeLayout>

    <!-- User selects premade templates here. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_border">

        <TextView
            android:id="@+id/recommended_templates_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rec_templates_label"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!-- Make New Template Button -->
    <Button
        android:id="@+id/new_template_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_template_button_label"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:padding="20dp" />

    <!-- Progress Bar and Next Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="25"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="25dp"/>

        <ImageView
            android:id="@+id/next_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/next"
            android:clickable="true"
            android:padding="10dp"
            android:scaleX="-1"
            android:src="@drawable/ic_back_svgrepo_com" />


    </LinearLayout>
</LinearLayout>